2017-06-02 0.8.5 indev
Accumulative changes from 2017-03:
  Don't crash if RtMidi initialization failed.
  Hopefully fixed crash when closing the
  visualization window on Windows.
  Documentation update.

2017-02-14 0.8.5 indev
Scan for plugins in the executable directory instead
of the working directory.

2017-02-13 0.8.5 indev
Also use the new mechanism to handle the main Window.
Explicit initialization of variable fixes #4 2).

2017-02-13 0.8.5 indev
Fix pitch bend range handling.
Allow registering a string option as file path.
Provide an easier way to set path values in options.
Revert to old geometry storage mechanism and improved
it. Hope this one will work on Windows.
Make the time slider less ugly.

2017-02-12 0.8.5 indev
UI revolution cont'd. Powered by @BLumia.
Expose new APIs to plugin developer.
Use svg icons.

2017-02-12 0.8.5 indev
New functionality API. Port built-in features to the
new API.
Start the revamp of the main Window. Credit of the
new design goes to @BLumia.

2017-02-10 0.8.5 indev
Road to standardize: use two parameters for pitchbend.
Documentation.
Minor bug fix.

2017-02-09 0.8.5 indev
Fix building on Windows.
Behavior changes:
 1. DnD into the main window now causes the dropped
 file to play.
 2. Switch back to w32usleep to increase bpm accuracy.
 3. Scan for plugins in application folder (in Windows),
 not in the working directory.


2017-02-09 0.8.5 indev
Add extra midi formats support via the file reader API.
Fix note counting.

2017-02-08 0.8.5 indev
Add API version verification. This breaks compatibility
with old versions of plugins.
Documentation.
Add RIFF MIDI support to the SMF reader.

2017-02-07 0.8.5 indev
First steps for the file reader API.
API additions and changes.
Fixed wrong button shown when started from file.

2017-02-07 0.8.3 alpha
Fixed 2D visualization broken by commit 8a0d671.

2017-02-01 0.8.3 alpha
Make packaging qmidiplayer less painful.
Add mime info.
Do not throw integers.